init dark mode fixes

--- a/polaris.shopify.com/src/components/ExampleWrapper/ExampleWrapper.module.scss
+++ b/polaris.shopify.com/src/components/ExampleWrapper/ExampleWrapper.module.scss
@@ -6,6 +6,7 @@
   box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.05), 0px 1px 2px rgba(0, 0, 0, 0.15);
   .Buttons {
     display: flex;
+    color: var(--p-text-subdued);
     justify-content: flex-end;
     border-top: 1px solid rgba(0, 0, 0, 0.075);
     padding: 0.75rem 1rem;
