--- a/polaris.shopify.com/src/components/PatternPage/PatternPage.module.scss
+++ b/polaris.shopify.com/src/components/PatternPage/PatternPage.module.scss
@@ -7,6 +7,15 @@
 }
 
 .TabGroup {
+  --tab-background: var(--p-surface-subdued);
+  --tab-background-pressed: var(--p-surface-pressed);
+  --tab-border: 1px solid #c9cccf;
+  @include dark-mode {
+    --tab-background: #18181d;
+    --tab-background-pressed: var(--tab-background);
+    --tab-border: 1px solid rgba(55, 55, 55, 1);
+  }
+  border-color: var(--tab-border-color);
   isolation: isolate;
   margin-left: -1rem;
   margin-right: -1rem;
@@ -23,13 +32,13 @@
   }
 }
 .Panel {
+  background-color: var(--tab-background);
   position: relative;
   padding: 1rem;
-  background-color: var(--p-surface-subdued);
   // Tuck it up underneath the tabs so it makes the tab buttons appear connected
   // to the panel by hiding a part of the border
   margin-top: -1px;
-  border: var(--p-border-divider);
+  border: var(--tab-border);
   border-radius: var(--border-radius-400);
 
   .TabGroup[data-selected='0'] & {
@@ -65,6 +74,7 @@
   z-index: 5;
 
   button {
+    background: var(--tab-background);
     z-index: 5;
     padding: 0.5rem 1rem;
     text-align: left;
@@ -83,8 +93,8 @@
 
     &[aria-selected='true'] {
       color: var(--text-strong);
-      background-color: var(--surface-pressed);
-      border: var(--p-border-divider);
+      background-color: var(--tab-background-pressed);
+      border: var(--tab-border);
       border-bottom: 0;
     }
     &:hover {
@@ -94,7 +104,7 @@
     &:focus,
     &:focus-visible {
       box-shadow: none;
-      border: var(--p-border-divider);
+      border: var(--tab-border);
       border-bottom: 0;
     }
   }
@@ -148,6 +158,10 @@
       counter-increment: item;
     }
     li:before {
+      --props-list-counter-background: inherit;
+      @include dark-mode {
+        --props-list-counter-background: rgba(240, 240, 240, 1);
+      }
       width: 24px;
       height: 24px;
       position: absolute;
@@ -155,10 +169,12 @@
       content: counter(item);
       font-weight: 700;
       color: rgba(153, 35, 247, 1);
+      background: var(--props-list-counter-background);
       vertical-align: bottom;
       text-align: center;
       display: block;
-      border-radius: 100%;
+      line-height: 1.5rem;
+      border-radius: var(--p-border-radius-2);
     }
   }
   @media screen and (max-width: $breakpointTablet) {
@@ -238,22 +254,28 @@
 
 .CustomTable {
   --props-table-border-color: #c9cccf;
+  --props-table-heading-background: rgba(0, 0, 0, 0.02);
+  --props-table-content-background: inherit;
   border: 1px solid var(--props-table-border-color);
   @include dark-mode {
-    --props-table-border-color: white;
+    --props-table-border-color: rgba(55, 55, 55, 1);
+    --props-table-heading-background: rgba(30, 30, 35, 1);
+    --props-table-content-background: rgba(22, 22, 25, 1);
   }
   border-radius: var(--border-radius-400);
 
   h3 {
-    background: rgba(0, 0, 0, 0.02);
+    background: var(--props-table-heading-background);
+    color: var(--text-strong);
     padding: 0.66rem 1rem;
     margin: 0;
   }
   .DefinitionList {
     display: grid;
-    @include dark-mode {
-      background: rgba(255, 255, 255, 0.05);
+    dt {
+      color: var(--text-strong);
     }
+    background: var(--props-table-content-background);
     border-top: 1px solid var(--props-table-border-color);
     grid-template-columns: fit-content(35%) 1fr;
     padding: 1rem;
