--- a/polaris.shopify.com/src/styles/globals.scss
+++ b/polaris.shopify.com/src/styles/globals.scss
@@ -217,7 +217,7 @@ body,
 .dark-mode {
   --text: #b0b0bc;
   --text-strong: #e7e7f1;
-  --text-subdued: #808089;
+  --text-subdued: #85858e;
   --text-link: #8bb2ff;
   --surface-information: #02382d;
   --surface-warning: #4c250f;
